// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`async-do-expressions.js [acorn] format 1`] = `
"Unexpected token (1:6)
   1 | async do {
   2 |   1;
   3 | };
   4 |
   5 | (async do {});
   6 |
   7 | let x = async do {
   8 |   if (foo()) { f() }
   9 |   else if (bar()) { g() }
  10 |   else { h() }
  11 | };
  12 |
  13 | async do {
  14 |   await 42
  15 | }
  16 |
  17 | function iter() {
  18 |   return async do {
  19 |     return 1;
  20 |   }
  21 | };
  22 |
  23 | let x = async do {
  24 |   let tmp = f();
  25 |   tmp * tmp + 1
  26 | };
  27 |"
`;

exports[`async-do-expressions.js [espree] format 1`] = `
"Unexpected token do (1:7)
> 1 | async do {
    |       ^
  2 |   1;
  3 | };
  4 |"
`;

exports[`async-do-expressions.js [meriyah] format 1`] = `
"[1:8]: Unexpected token: 'do' (1:8)
> 1 | async do {
    |        ^
  2 |   1;
  3 | };
  4 |"
`;

exports[`async-do-expressions.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
async do {
  1;
};

(async do {});

let x = async do {
  if (foo()) { f() }
  else if (bar()) { g() }
  else { h() }
};

async do {
  await 42
}

function iter() {
  return async do {
    return 1;
  }
};

let x = async do {
  let tmp = f();
  tmp * tmp + 1
};

=====================================output=====================================
(async do {
  1;
});

(async do {});

let x = async do {
  if (foo()) {
    f();
  } else if (bar()) {
    g();
  } else {
    h();
  }
};

(async do {
  await 42;
});

function iter() {
  return async do {
    return 1;
  };
}

let x = async do {
  let tmp = f();
  tmp * tmp + 1;
};

================================================================================
`;
